# Multi-Modal-Sentiment-Analysis

./: advanced_facial_analyzer.py  app.py  claude_analyzer.py  deep_facial_analyzer.py  enhanced_facial_analyzer.py  facial_expression_analyzer.py  main.py  manage_model.py  pyproject.toml  replit.nix  sentiment_analyzer.py
models/: enhanced_face_model.py  face_expression_model.py  tensorflow_face_model.py  text_sentiment_model.py  train_emotion_model.py  train_model.py  train_tensorflow_model.py
static/css/: custom.css
static/js/: main.js
templates/: error.html  index.html  results.html
utils/: dataset_manager.py  image_processing.py  text_processing.py
